Update tee-hw.md